courses and about  implemented

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
-.navbar{
+.nav-bar{
     background-color: rgb(226, 226, 226);
     color: rgb(107, 107, 107);
+    
 }
 .brand-name{
     color:#F50057 !important ;
