--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,7 @@
     background-color: rgb(226, 226, 226);
     color: rgb(107, 107, 107);
     padding: 20px;
+    margin-top: 100px;
 }
 a{
     text-decoration: none;
